# Wormhole

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.debug  Guide.md  LICENSE  README.md  bot.py  config.json  convert.py  convert_config_to_sql.py  default_configuration.json  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  requirements.txt  run.py  run_discord.py  run_signal.py  run_telegram.py  setup-hooks.sh  update.sh
bot/: config.py  events.py  signal.py  telegram.py  wormhole.py
bot/commands/: admin.py  general.py  wormhole.py
bot/discord/: __init__.py  bot.py  commands.py  events.py
bot/features/: content_filtering.py  embed.py  pretty_message.py  proof_of_work.py  role_management.py  user_management.py  wormhole_economy.py
bot/features/LLM/: config.py  gemini.py  ollama.py
bot/features/LLM/moderation/: prompt.py
bot/signal/: signal.py
bot/telegram/: telegram.py
bot/utils/: file.py  logging.py
config/: default_config.json
docker/ssh-chat/: Dockerfile.debug.yml  Dockerfile.prod.yml
node/: callbacks.c  callbacks.h  dht_nodes.h  main.c  redis_utils.c  redis_utils.h  tox_utils.c  tox_utils.h
scripts/hooks/: post-merge
services/: discord.py  tox.py
tools/: generate_salt.py  migrate_json_config.py
web/: Wormhole.json  package-lock.json  package.json  rollup.config.js  tailwind.config.js
web/app/: app.py
web/app/static/svelte/index/: index.js  index.js.map  style.css
web/app/svelte/index/: App.svelte  main.js
web/app/templates/: index.html
